# triolet

./: .boring  HACKING  LICENSE  Makefile  README  Setup.hs  SetupConfig.hs  SetupMake.hs  SetupPaths.hs  SetupTest.hs  TODO  aclocal.m4  build.mk  config.linux.mk  config.mk.in  configure.ac  makedepend.sh  makedoc.sh  myconfig.mk  pyon.cabal  setup.py  triolet.cabal  variables.mk
BuildSystem/: Args.hs  Command.hs  Config.hs  Path.hs  Rules.hs
SetupSrc/: Args.hs  Command.hs  Config.hs  Path.hs  Rules.hs
data/include/: PyonData.h  TrioletData.h  pyon.h  pyon_list.h  pyon_matrix.h  triolet.h  triolet_list.h  triolet_matrix.h
data/include/pyon/: Base.h  Layout.h
data/include/triolet/: Base.h  Layout.h
data/symbols/: SFBuiltin.glu  corecode  coremodule  coretypes  coretypes2
data/testcases/: 001float.py  002int.py  003functions.py  004poly.py  004tupleparam.py  005if.py  006capture.py  009tuple_class.py  011fibonacci.py  012stream_poly.py  013nested_fun.py  014oper_coerce.py  015additive.py  nn.py
doc/: Domains.hs  Slice.hs  core_language.txt  pyon_language.html
doc/spec/: TestDomain.hs
doc/spec/Triolet/: Container.hs  Domain.hs  Sequence.hs
mk/: flags.mk  programs.mk  rules.mk
src/compiler/: Main.hs  Main_c.c  Python.hsc  anf_conversion.py  example_ast.py  parser.py  pretty.py  unification.py
src/compiler/Parser/: Driver.hs  Output.hs  Parser.hs  ParserSyntax.hs
src/compiler/ast/: __init__.py  ast.py  operators.c  operators.h  parser_ast.py  print_ast.py  print_parser_ast.py  printast.py
src/compiler/parser/: Main.hs  Parser.hs  ParserSyntax.hs  Python.hsc  PythonPrint.hs
src/compiler/pyon_types/: hmtype.py
src/compiler/ssa/: __init__.py  parser_ssa.py
src/program/: CommandLine.hs  Export.hs  GlobalVar.hs  Globals.hs  GluonBackend.hs  InitializeGlobals.hs  Job.hs  Main.hs  Main_c.c  Paths.hs  Python.hsc  Python_c.c  Timer.hs
src/program/Builtins/: Builtins.hs  BuiltinsTH.hs  TypeFunctions.hs
src/program/CParser/: AST.hs  Driver.hs  GenCore.hs  LevelInference.hs  LexData.hs  Lexer.x  Parser.hs  PrettyAST.hs  Resolve.hs
src/program/CParser2/: AST.hs  AdjustTypes.hs  Driver.hs  GenCode.hs  GenCode2.hs  GenCore.hs  LevelInference.hs  LexData.hs  Lexer.x  Parser.hs  Pretty.hs  PrettyAST.hs  Resolve.hs
src/program/Common/: ConPattern.hs  Error.hs  Identifier.hs  Label.hs  MonadLogic.hs  PrecDoc.hs  Progress.hs  SourcePos.hs  Supply.hs  THRecord.hs  Worklist.hs
src/program/Core/: BuiltinTypes.hs  Gluon.hs  Lowering.hs  PartialEval.hs  Print.hs  Rewriting.hs  Syntax.hs  TypeLowering.hs  TypeLowering.hs-boot  Unpacking.hs
src/program/CxxInterface/: CxxWrapperGenerator.c  CxxWrapperGenerator.h  CxxWrapperGeneratorPrint.c  CxxWrapperGeneratorPrint.h  CxxWrapperGeneratorTypes.c  CxxWrapperGeneratorTypes.h  Signature.c  Signature.h  SignatureHS.hsc
src/program/Gluon/: Globals.hs  Gluon.hs  Gluon_c.c
src/program/LLParser/: AST.hs  GenLowLevel.hs  GenLowLevel2.hs  LexCode.hs  Lexer.x  Parser.hs  TypeInference.hs
src/program/LowLevel/: Binary.hs  BinaryUtils.hs  Build.hs  BuiltinCalls.hs  Builtins.hs  BuiltinsTH.hs  CSE.hs  ClosureCode.hs  ClosureSelect.hs  Closures.hs  CodeTypes.hs  DeadCode.hs  Expr.hs  FreshVar.hs  GenerateC.hs  GenerateCCode.hs  GenerateCHeader.hs  GenerateCUtils.hs  GenerateCXXHeader.hs  InitializeBuiltins.hs  Inlining.hs  Inlining2.hs  InterfaceFile.hs  Intrinsics.hs  JoinPoints.hs  Label.hs  LambdaConvert.hs  Lint.hs  LocalCPS.hs  LocalCPSAnn.hs  NormalizeTail.hs  OldReferenceCounting.hs  Print.hs  Record.hs  RecordFlattening.hs  Records.hs  ReferenceCounting.hs  ReferenceTracking.hs  RemoveUnits.hs  Rename.hs  (+3 more)
src/program/Parser/: SSA.hs  (+11 more)
src/pyon/: anf_conversion.py  builtin_data.py  compiler.py  functional_conversion.py  parser.py  partial_eval.py  pretty.py  type_inference.py  unification.py
src/rts/: ComputeLayout.hs  apply.c  apply.h  apply_data.c  apply_new.h  apply_new.llt  apply_new.pyasm  apply_py.h  buffer.h  buffer.llt  complex.h  complex.pyasm  debug.c  debug.h  effects.h  effects.llt  effects.pyasm  hashtable.c  init.c  init.h  inplace.h  inplace.llt  inplace.pyasm  lazy.h  lazy.llt  list.h  list.llt  list.pyasm  list_c.c  memory.c  memory.h  memory_map.c  memory_map.h  memory_map_darwin.c  memory_map_darwin.h  memory_map_procfs.c  memory_map_procfs.h  memory_py.h  memory_py.llt  memory_py.pyasm  (+24 more)
src/scripts/: pyon_compile  pyon_testsuite
src/testdriver/: CUnitTest.hs  Statistics.hs  TestCase.hs  testdriver.hs
symbols/: pyon.h
test/000sample/: config  info
test/001float/: config  f.pyon  info  main.c
test/002int/: config  i.py  info  main.c
test/003compare/: compare.pyon  config  main.c
test/004function/: config  function.pyon  main.c
test/005capture/: config  main.c
test/006poly/: config  main.c  poly.pyon
test/007tuple/: config  main.c  tuples.pyon
test/008additive/: config  main.c
test/009multiplicative/: config  main.c  mul.pyon
test/010boxfun/: config  main.c
test/011boxtuple/: boxed.pyon  config  main.c
test/011lcps/: main.c  test.pyasm
test/012mapint/: config  main.c
test/013minindex/: config  main.c  minindex.pyon
test/014remainder/: config  main.c  remainder.pyon
test/015nn/: config  main.c  nearest.pyon
test/016dot/: config  dot.pyon  main.c
test/017fpmath/: config  fp.pyon  main.c
test/018zips/: config  main.c  zips.pyon
test/019nested/: config  main.c  nested.pyon
test/020histogram/: config  histo.pyon  main.c
test/021fib/: config  fib.pyon
test/022power/: config
test/023reccst/: config  reccst.pyon
test/024guard/: config  main.c  sumpos.pyon
test/025pairwise/: config  pairwise.pyon
test/026pairwiseB/: main.c  pairwise.pyon
test/027callcparam/: callc.pyon  config
test/028freetype/: config
test/029matrix/: config  main.c  test.pyon
test/030matrixsum/: config  main.c  test.pyon
test/031slice/: config
test/032downsample/: config  downsample.pyon  main.c
test/033matmul/: config  main.c  matmul.pyon
test/034stencil/: config  stencil.pyon
test/035lcpshoist/: config  test.pyasm
testcases/: 003if_else.py  006nested_if.py  nn.py
(+428 files in other folders)
