Name:		pyon
Version:	0.1
Cabal-Version:	>= 1.8 && < 1.9
Synopsis:	Compiler for the data-parallel Pyon language
License:	OtherLicense
License-File:	LICENSE
Stability:	experimental
Author:		Christopher Rodrigues
Build-Type:	Custom
Tested-With:	GHC == 6.12.1, GHC == 6.12.3

Data-Dir:	dist/build/data
Data-Files:
  symbols/coretypes
  include/pyon.h
  include/pyon_list.h
  testcases/*.py
  interfaces/memory_py.pi
  interfaces/prim.pi
  interfaces/structures.pi
  interfaces/list.pi
  interfaces/stream.pi
  libpyonrts.so

Executable pyon
  Hs-Source-Dirs: src/program
  Build-Depends:
    base >= 4 && < 5,
    array,
    bytestring,
    template-haskell,
    directory,
    filepath,
    process,
    random,
    binary,
    containers,
    transformers,
    monads-fd,
    fgl,
    pretty,
    language-python-pyon == 0.2.1,
    language-c,
    parsec == 3.*,
    utf8-string
  Extensions:
    ScopedTypeVariables, MultiParamTypeClasses, PatternGuards, GADTs,
    EmptyDataDecls, TypeOperators, TypeFamilies, DeriveDataTypeable
  Main-Is:	Main.hs
  Other-Modules:
    Paths_pyon
    Paths
    Export
    Globals
    GlobalVar
    InitializeGlobals
    Job
    CommandLine
    Builtins.BuiltinsTH
    Builtins.Builtins
    Common.Error
    Common.Identifier
    Common.Label
    Common.MonadLogic
    Common.SourcePos
    Common.Supply
    Common.THRecord
    Parser.Driver
    Parser.Parser
    Parser.ParserSyntax
    Parser.SSA
    Parser.GenUntyped
    Untyped.Builtins
    Untyped.BuiltinsTH
    Untyped.InitializeBuiltins
    Untyped.Classes
    Untyped.Data
    Untyped.GenSystemF
    Untyped.HMType
    Untyped.Kind
    Untyped.Print
    Untyped.Syntax
    Untyped.TypeAssignment
    Untyped.TypeInference
    Untyped.TypeInferenceEval
    Untyped.Unification
    SystemF.DeadCode
    SystemF.DictEnv
    SystemF.ElimPatternMatching
    SystemF.Floating
    SystemF.LocalExprRewrite
    SystemF.Lowering.Datatypes
    SystemF.Lowering.Marshaling
    SystemF.Lowering.Lowering
    SystemF.Lowering.LowerMonad
    SystemF.MemoryIR
    SystemF.OutputPassing
    SystemF.PartialEval
    SystemF.Print
    SystemF.PrintMemoryIR
    SystemF.Representation
    SystemF.Rename
    SystemF.StreamSpecialize
    SystemF.Syntax
    SystemF.Typecheck
    SystemF.TypecheckSF
    SystemF.TypecheckMem
    CParser.AST
    CParser.Driver
    CParser.GenCore
    CParser.LevelInference
    CParser.LexData
    CParser.Lexer
    CParser.Parser
    CParser.Pretty
    CParser.PrettyAST
    CParser.Resolve
    LLParser.AST
    LLParser.LexCode
    LLParser.Lexer
    LLParser.Parser
    LLParser.GenLowLevel2
    LLParser.TypeInference
    LowLevel.Binary
    LowLevel.BinaryUtils
    LowLevel.Builtins
    LowLevel.BuiltinsTH
    LowLevel.CodeTypes
    LowLevel.CSE
    LowLevel.InitializeBuiltins
    LowLevel.Inlining
    LowLevel.InterfaceFile
    LowLevel.Build
    LowLevel.ClosureSelect
    LowLevel.Closures
    LowLevel.ClosureCode
    LowLevel.DeadCode
    LowLevel.Expr
    LowLevel.FreshVar
    LowLevel.GenerateC
    LowLevel.GenerateCCode
    LowLevel.GenerateCHeader
    LowLevel.GenerateCUtils
    LowLevel.Intrinsics
    LowLevel.Syntax
    LowLevel.Print
    LowLevel.Record
    LowLevel.Records
    LowLevel.RecordFlattening
    LowLevel.ReferenceCounting
    LowLevel.Rename
    LowLevel.Types
    Type.Compare
    Type.Environment
    Type.Eval
    Type.Level
    Type.Rename
    Type.Type
    Type.Var
