Name:		pyon
Version:	0.1
Cabal-Version:	>= 1.8 && < 1.9
Synopsis:	Compiler for the data-parallel Pyon language
License:	OtherLicense
License-File:	LICENSE
Stability:	experimental
Author:		Christopher Rodrigues
Build-Type:	Custom
Tested-With:	GHC == 6.12.1, GHC == 6.12.3

Data-Dir:	dist/build/data
Data-Files:
  symbols/corecode
  symbols/coretypes2
  include/pyon.h
  include/pyon_list.h
  include/pyon_matrix.h
  interfaces/memory_py.pi
  interfaces/effects.pi
  interfaces/prim.pi
  interfaces/structures.pi
  interfaces/list.pi
  interfaces/stream.pi
  libpyonrts.so

Executable pyon
  Hs-Source-Dirs: src/program
  Build-Depends:
    base >= 4 && < 5,
    array,
    bytestring,
    template-haskell,
    directory,
    filepath,
    process,
    random,
    binary,
    containers,
    transformers,
    monads-fd,
    fgl,
    pretty,
    language-python-pyon == 0.2.2,
    language-c,
    parsec == 3.*,
    unix,
    utf8-string
  Extensions:
    ScopedTypeVariables, MultiParamTypeClasses, PatternGuards, GADTs,
    EmptyDataDecls, TypeOperators, TypeFamilies, DeriveDataTypeable
  Ghc-Options: -auto
  Include-Dirs:
    src/program
  Main-Is:	Main.hs
  C-Sources:
    cutils/Pool.c
    CxxInterface/Signature.c
  Other-Modules:
    Paths_pyon
    Machine
    Paths
    Export
    Globals
    GlobalVar
    InitializeGlobals
    Job
    CommandLine
    Builtins.BuiltinsTH
    Builtins.Builtins
    Builtins.TypeFunctions
    Common.Error
    Common.Identifier
    Common.Label
    Common.MonadLogic
    Common.PrecDoc
    Common.SourcePos
    Common.Supply
    Common.THRecord
    CxxInterface.SignatureHS
    Parser.Driver
    Parser.Parser
    Parser.ParserSyntax
    Parser.SSA
    Parser.GenUntyped
    Untyped.Builtins
    Untyped.BuiltinsTH
    Untyped.InitializeBuiltins
    Untyped.Classes
    Untyped.Data
    Untyped.GenSystemF
    Untyped.HMType
    Untyped.Kind
    Untyped.Print
    Untyped.Syntax
    Untyped.TypeAssignment
    Untyped.TypeInference
    Untyped.TypeInferenceEval
    Untyped.Unification
    SystemF.ArgumentFlattening
    SystemF.Build
    SystemF.Context
    SystemF.Demand
    SystemF.DemandAnalysis
    SystemF.DeadCode
    SystemF.DeadCodeSF
    SystemF.DictEnv
    SystemF.ElimPatternMatching
    SystemF.EtaReduce
    SystemF.Floating2
    SystemF.GlobalDemand
    SystemF.IncrementalSubstitution
    SystemF.LoopRewrite
    SystemF.Lowering.Datatypes2
    SystemF.Lowering.Marshaling
    SystemF.Lowering.Lowering2
    SystemF.Lowering.LowerMonad
    SystemF.MemoryIR
    SystemF.PartialEval
    SystemF.Print
    SystemF.PrintMemoryIR
    SystemF.ReprInference
    SystemF.Rename
    SystemF.ReprDict
    SystemF.Simplifier.AbsValue
    SystemF.Simplifier.Rewrite
    SystemF.Simplifier.Simplify
    SystemF.SpecToMem
    SystemF.Syntax
    SystemF.Typecheck
    SystemF.TypecheckSF
    SystemF.TypecheckMem
    CParser2.AST
    CParser2.Driver
    CParser2.GenCode
    CParser2.GenCore
    CParser2.LexData
    CParser2.Lexer
    CParser2.Parser
    CParser2.Resolve
    LLParser.AST
    LLParser.LexCode
    LLParser.Lexer
    LLParser.Parser
    LLParser.GenLowLevel2
    LLParser.TypeInference
    LowLevel.Binary
    LowLevel.BinaryUtils
    LowLevel.Builtins
    LowLevel.BuiltinsTH
    LowLevel.CodeTypes
    LowLevel.CSE
    LowLevel.InitializeBuiltins
    LowLevel.Inlining
    LowLevel.InterfaceFile
    LowLevel.Build
    LowLevel.Closure.CCInfo
    LowLevel.Closure.Capture
    LowLevel.Closure.Code
    LowLevel.Closure.Hoisting
    LowLevel.Closure.LocalCPS
    LowLevel.Closure.LocalCPSAnn
    LowLevel.ClosureSelect
    LowLevel.Closures
    LowLevel.DeadCode
    LowLevel.Expr
    LowLevel.FreshVar
    LowLevel.GenerateC
    LowLevel.GenerateCCode
    LowLevel.GenerateCHeader
    LowLevel.GenerateCXXHeader
    LowLevel.GenerateCUtils
    LowLevel.Intrinsics
    LowLevel.LambdaConvert
    LowLevel.Syntax
    LowLevel.Print
    LowLevel.Record
    LowLevel.Records
    LowLevel.RecordFlattening
    LowLevel.ReferenceCounting
    LowLevel.Rename
    LowLevel.Types
    Type.Compare
    Type.Environment
    Type.Eval
    Type.Level
    Type.Rename
    Type.Substitute
    Type.Type
    Type.Var
