Name:		triolet
Version:	0.1
Cabal-Version:	>= 1.8 && < 1.9
Synopsis:	Compiler for the data-parallel Triolet language
License:	OtherLicense
License-File:	LICENSE
Stability:	experimental
Author:		Christopher Rodrigues
Build-Type:	Custom
Tested-With:	GHC == 6.12.1, GHC == 6.12.3

Data-Dir:	dist/build/data
Data-Files:
  symbols/corecode
  symbols/coretypes2
  include/triolet.h
  include/triolet_list.h
  include/triolet_matrix.h
  include/TrioletData.h
  include/triolet/Layout.h
  include/triolet/Base.h
  interfaces/memory_py.ti
  interfaces/effects.ti
  interfaces/prim.ti
  interfaces/inplace.ti
  interfaces/structures.ti
  interfaces/list.ti
  interfaces/stream.ti
  libtrioletrts.so

Executable triolet 
  Hs-Source-Dirs: src/program
  Build-Depends:
    base >= 4 && < 5,
    array,
    bytestring,
    template-haskell,
    directory,
    filepath,
    process,
    random,
    binary,
    containers,
    transformers,
    monads-tf,
    fgl,
    pretty,
    language-c,
    parsec == 3.*,
    unix,
    utf8-string
  Extensions:
    ScopedTypeVariables, MultiParamTypeClasses, PatternGuards, GADTs,
    EmptyDataDecls, TypeOperators, TypeFamilies, DeriveDataTypeable,
    FlexibleInstances
  Ghc-Options: -auto
  Include-Dirs:
    src/program
  Main-Is:	Main.hs
  C-Sources:
    cutils/Pool.c
    CxxInterface/Signature.c
    CxxInterface/CxxWrapperGeneratorTypes.c
    CxxInterface/CxxWrapperGeneratorPrint.c
    CxxInterface/CxxWrapperGenerator.c
  Other-Modules:
    Paths_triolet
    Machine
    Paths
    Export
    Globals
    GlobalVar
    InitializeGlobals
    Job
    CommandLine
    Builtins.BuiltinsTH
    Builtins.Builtins
    Builtins.TypeFunctions
    Common.Error
    Common.Identifier
    Common.Label
    Common.MonadLogic
    Common.PrecDoc
    Common.SourcePos
    Common.Supply
    Common.THRecord
    Common.Worklist
    Language.Python.Common
    Language.Python.Common.ParseError
    Language.Python.Common.SrcLocation
    Language.Python.Common.Pretty
    Language.Python.Common.Token
    Language.Python.Common.ParserMonad
    Language.Python.Common.PrettyToken
    Language.Python.Common.AST
    Language.Python.Common.PrettyAST
    Language.Python.Version3
    Language.Python.Version3.Parser
    Language.Python.Version3.Lexer
    Language.Python.Common.PrettyParseError
    Language.Python.Common.StringEscape
    Language.Python.Common.ParserUtils
    Language.Python.Common.LexerUtils
    Language.Python.Version3.Parser.Parser
    Language.Python.Version3.Parser.Lexer
    CxxInterface.SignatureHS
    Parser.Driver
    Parser.Parser
    Parser.ParserSyntax
    Parser.SSA
    Parser.GenUntyped
    Untyped.Builtins
    Untyped.BuiltinsTH
    Untyped.InitializeBuiltins
    Untyped.Classes
    Untyped.Data
    Untyped.GenSystemF
    Untyped.HMType
    Untyped.Kind
    Untyped.Print
    Untyped.Syntax
    Untyped.TypeAssignment
    Untyped.TypeInference
    Untyped.TypeInferenceEval
    Untyped.Unification
    SystemF.ArgumentFlattening
    SystemF.Build
    SystemF.Context
    SystemF.ConSpecialization
    SystemF.Datatypes.TypeLayout
    SystemF.Datatypes.ComputeLayout
    SystemF.Datatypes.RuntimeLayout
    SystemF.Demand
    SystemF.DemandAnalysis
    SystemF.DeadCode
    SystemF.DeadCodeSF
    SystemF.DictEnv
    SystemF.EtaReduce
    SystemF.Floating2
    SystemF.IncrementalSubstitution
    SystemF.LoopRewrite
    SystemF.Lowering.Datatypes2
    SystemF.Lowering.Marshaling
    SystemF.Lowering.Lowering2
    SystemF.Lowering.LowerMonad
    SystemF.MemoryIR
    SystemF.PartialEval
    SystemF.Print
    SystemF.PrintMemoryIR
    SystemF.ReprInference
    SystemF.Rename
    SystemF.ReprDict
    SystemF.Simplifier.AbsValue
    SystemF.Simplifier.Rewrite
    SystemF.Simplifier.Simplify
    SystemF.Simplifier.StreamExp
    SystemF.SpecToMem
    SystemF.Syntax
    SystemF.Typecheck
    SystemF.TypecheckSF
    SystemF.TypecheckMem
    CParser2.AST
    CParser2.Driver
    CParser2.GenCode
    CParser2.GenCore
    CParser2.LexData
    CParser2.Lexer
    CParser2.Parser
    CParser2.Resolve
    LLParser.AST
    LLParser.LexCode
    LLParser.Lexer
    LLParser.Parser
    LLParser.GenLowLevel2
    LLParser.TypeInference
    LowLevel.Binary
    LowLevel.BinaryUtils
    LowLevel.Builtins
    LowLevel.BuiltinsTH
    LowLevel.CodeTypes
    LowLevel.CSE
    LowLevel.InitializeBuiltins
    LowLevel.Inlining2
    LowLevel.InterfaceFile
    LowLevel.Build
    LowLevel.Closure.CCInfo
    LowLevel.Closure.Capture
    LowLevel.Closure.Code
    LowLevel.Closure.Hoisting
    LowLevel.Closure.LocalCPS
    LowLevel.Closure.LocalCPSAnn
    LowLevel.ClosureSelect
    LowLevel.Closures
    LowLevel.DeadCode
    LowLevel.Expr
    LowLevel.FreshVar
    LowLevel.GenerateC
    LowLevel.GenerateCCode
    LowLevel.GenerateCHeader
    LowLevel.GenerateCXXHeader
    LowLevel.GenerateCUtils
    LowLevel.Intrinsics
    LowLevel.JoinPoints
    LowLevel.NormalizeTail
    LowLevel.Syntax
    LowLevel.Print
    LowLevel.Record
    LowLevel.Records
    LowLevel.RecordFlattening
    LowLevel.ReferenceCounting
    LowLevel.RemoveUnits
    LowLevel.Rename
    LowLevel.Types
    Type.Compare
    Type.Environment
    Type.Eval
    Type.Level
    Type.Rename
    Type.Substitute
    Type.Type
    Type.Var
